Updated items and moved items